--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,3 +4,6 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "card-category";
+@import "cards";
+@import "card-trip";
+@import "card-product";
