--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -47,3 +47,11 @@
 .footer .fa-heart {
   color: #D23333;
 }
+
+.list-link {
+  color: white
+}
+
+.list-without-img {
+  background-color: #756565;
+}
