--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://res.cloudinary.com/dk7qaea1j/image/upload/v1709896656/biblio_nzbgia.jpg')">
   <div class="container">
     <h1>Discover fabulous forgotten films</strong>!</h1>
     <p>Change your way of life showing films</p>
@@ -6,12 +6,20 @@
 </div>
 <div class='d-flex'>
   <h1>My Lists</h1>
-  <%= link_to 'Create a movie list', new_list_path , class: 'btn btn-primary' %>
+  <div>
+    <%= link_to 'Create a movie list', new_list_path , class: 'btn btn-primary m-2' %>
+  </div>
 </div>
-<div class='d-flex'>
+<div class="cards">
   <% @lists.each do |list| %>
-    <div class="card-category m-3" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-      <%= link_to list.name, list_path(list) %>
-    </div>
+    <% if list.photo.attached? %>
+      <div class="card-category m-3" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, crop: :fill %>')">
+        <%= link_to list.name, list_path(list),class: 'list-link text-decoration-none' %>
+      </div>
+    <% else  %>
+      <div class="card-category m-3 list-without-img" >
+        <%= link_to list.name, list_path(list), class: 'list-link text-decoration-none' %>
+      </div>
+    <% end %>
   <% end %>
 </div>
