--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,45 +1,64 @@
-<h1><%= @list.name %></h1>
-<%= link_to 'Back to list', lists_path , class: 'btn btn-primary' %>
-
-<div>
-  <h3>add a movie</h3>
-  <%= simple_form_for [@list, @bookmark] do |f| %>
-  <%= f.input :comment %>
-  <%= f.association :movie %>
-  <%= f.submit class:'btn btn-primary'%>
-<% end %>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path @list.photo.key, crop: :fill %>')">
+  <div class="container">
+    <h1><%= @list.name %></h1>
+    <%= link_to 'Back to list', lists_path , class: 'btn btn-primary' %>
+  </div>
 </div>
 
-<div>
+
+<div class=" m-3">
   <h2>Movies</h2>
-  <% @list.bookmarks.each do |bookmark| %>
-    <div>
-      <%= bookmark.comment %>
-      <%= image_tag bookmark.movie.poster_url %>
-      <%= bookmark.movie.rating %>
-      <%= link_to bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'text-decoration-none' do %>
-        <i class="fa fa-trash"></i>
+  <div class="cards">
+    <% @list.bookmarks.each do |bookmark| %>
+      <div class="card-trip">
+        <%= image_tag bookmark.movie.poster_url %>
+        <div class="card-trip-infos">
+          <div>
+            <h2><%= bookmark.movie.title %></h2>
+            <p><%= bookmark.movie.overview %></p>
+            <p><strong><%= bookmark.comment %></strong></p>
+          </div>
+          <%= bookmark.movie.rating %>
+          <%= link_to bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'text-decoration-none' do %>
+            <i class="fa fa-trash"></i>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+</div>
+
+<div class="card-product m-3">
+  <%= cl_image_tag("filmaventures_ejw6aw", crop: :fill) %>
+  <div class="card-product-infos">
+    <h2>add a movie</h2>
+    <%= simple_form_for [@list, @bookmark] do |f| %>
+      <%= f.input :comment %>
+      <%= f.association :movie %>
+      <%= f.submit 'Add a movie', class:'btn btn-primary'%>
+    <% end %>
+  </div>
+</div>
+
+<div class="d-flex m-3">
+  <div>
+    <h2>Reviews</h2>
+    <% @list.reviews.each do |review| %>
+      <div>
+        <%= review.comment %>
+        <%= review.rating %>
+        <p>posted <%= time_ago_in_words(review.created_at) %> ago</p>
+      </div>
+    <% end %>
+  </div>
+  <div class="card-product">
+    <%= cl_image_tag("filmaventures_ejw6aw", crop: :fill) %>
+    <div class="card-product-infos">
+      <h2>Add your review</h2>
+      <%= simple_form_for [@list, @review] do |f| %>
+        <%= f.input :comment %>
+        <%= f.input :rating, collection: (0..5) %>
+        <%= f.submit class:'btn btn-primary'%>
       <% end %>
     </div>
-  <% end %>
-</div>
-
-<div>
-  <h3>Add your review</h3>
-  <%= simple_form_for [@list, @review] do |f| %>
-  <%= f.input :comment %>
-  <%= f.input :rating, collection: (0..5) %>
-  <%= f.submit class:'btn btn-primary'%>
-<% end %>
-</div>
-
-<div>
-  <h2>Reviews</h2>
-  <% @list.reviews.each do |review| %>
-    <div>
-      <%= review.comment %>
-      <%= review.rating %>
-      <p>posted <%= time_ago_in_words(review.created_at) %> ago</p>
-    </div>
-  <% end %>
+  </div>
 </div>
